--- a/index.html
+++ b/index.html
@@ -644,6 +644,21 @@
                     <img src="./icons/group-icon/Group by Instant Pot-group-icon.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
                     <p class="sidebar-con--flex--box--img--name">Instant Pot Instant Pot® Community</p>
                 </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/gfx-mentor.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">GFX Mentor Community</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/gta6.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">Gta Games</p>
+                </div>
+
+                <div class="sidebar-con--flex--box">
+                    <img src="./icons/group-icon/pc-games.jpg" alt="" class="sidebar-con--flex--box--img border-round-small">
+                    <p class="sidebar-con--flex--box--img--name">Dream Games</p>
+                </div>
             </div>
         </section>
 
@@ -681,12 +696,12 @@
             <div class="active-con--flex-con">
                 <div class="active-con--flex-con--flex">
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <img src="./img/user/user-11-.jpg" alt="" class="active-con--flex-con--flex--box--img">
                         <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-2-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <img src="./img/user/user-12.jpg" alt="" class="active-con--flex-con--flex--box--img">
                         <p class="active-con--flex-con--flex--box--img--name">SmashCode</p>
 
                     </div>
@@ -737,59 +752,53 @@
                     </div>
 
 
+
+
+
+
+
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-14.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">Jolica</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-15.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">NOrIA</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-32.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">JOHn</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-34.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">TINA Markos</p>
+                    </div>
+                    <div class="active-con--flex-con--flex--box">
+                        <img src="./img/user/user-19.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">SaLAMia</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user//user-33.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">Amili</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-35.png" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">Skylar</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-22.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">MArkos</p>
                     </div>
 
                     <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
-                    </div>
-
-                    <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
-                    </div>
-
-                    <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
-                    </div>
-
-                    <div class="active-con--flex-con--flex--box">
-                        <img src="./icons/user-icon/user-1-icon.jpg" alt="" class="active-con--flex-con--flex--box--img">
-                        <p class="active-con--flex-con--flex--box--img--name">Ismail Sheikh</p>
+                        <img src="./img/user/user-23.jpg" alt="" class="active-con--flex-con--flex--box--img">
+                        <p class="active-con--flex-con--flex--box--img--name">MR BEnN</p>
                     </div>
                 </div>
             </div>
@@ -799,6 +808,16 @@
 
 
 
+        </section>
+
+        <section class="main-con">
+            <div class="main-con--story-con">
+                <div class="main-con--story-con--grid">
+                    <div class="main-con--story-con--grid--box">
+                        <img src="./img/author/download.png" alt="" class="main-con--story-con--grid--box--img">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
