--- a/index.html
+++ b/index.html
@@ -814,7 +814,20 @@
             <div class="main-con--story-con">
                 <div class="main-con--story-con--grid">
                     <div class="main-con--story-con--grid--box">
-                        <img src="./img/author/download.png" alt="" class="main-con--story-con--grid--box--img">
+                        <img src="./img/author/me.jpg" alt="" class="main-con--story-con--grid--box--img">
+                        <div class="main-con--story-con--grid--box--img--plus-circle">
+                            <svg fill="currentColor" viewBox="0 0 20 20" width="2rem" height="2rem" class="main-con--story-con--grid--box--img--plus-circle--icon" style="user-select: auto;"><g fill-rule="evenodd" transform="translate(-446 -350)" style="user-select: auto;"><g fill-rule="nonzero" style="user-select: auto;"><path d="M95 201.5h13a1 1 0 1 0 0-2H95a1 1 0 1 0 0 2z" transform="translate(354.5 159.5)" style="user-select: auto;"></path><path d="M102.5 207v-13a1 1 0 1 0-2 0v13a1 1 0 1 0 2 0z" transform="translate(354.5 159.5)" style="user-select: auto;"></path></g></g></svg>
+                        </div>
+                        <p class="main-con--story-con--grid--box--img--plus-circle--icon--name">Create story</p>
+                    </div>
+
+
+                    <div class="main-con--story-con--grid--normal-box">
+                        <img src="./img/group-story/GOvVANn-story.webp" alt="" class="main-con--story-con--grid--normal-box--img">
+                        <div class="main-con--story-con--grid--normal-box--profile-circle">
+                            <img src="./img/user/user-3-img.jpg" alt="" class="main-con--story-con--grid--normal-box--profile-circle--img">
+                        </div>
+                        <p class="main-con--story-con--grid--normal-box--profile-circle--img--name">GOvVANn</p>
                     </div>
                 </div>
             </div>
