start from 2 part of mnd section

--- a/index.html
+++ b/index.html
@@ -845,15 +845,24 @@
                         <p class="main-con--story-con--grid--normal-box--profile-circle--img--name" style="user-select: auto;">@Nimo Jerry</p>
                     </div>
 
-
                     <div class="main-con--story-con--grid--normal-box--loader-con">
                         <div class="main-con--story-con--grid--normal-box--loader-con--header">
                             <div class="main-con--story-con--grid--normal-box--loader-con--header--img"></div>
                         </div>
                     </div>
+                    <a href="#Story" style="position: absolute;">
+                        <div class="main-con--story-con--grid--normal-box--arrow-circle">
+                            <svg viewBox="0 0 20 20" width="2rem" height="2rem" class="main-con--story-con--grid--normal-box--arrow-circle--icon" style="user-select: auto;"><g fill-rule="evenodd" transform="translate(-446 -350)" style="user-select: auto;"><g fill-rule="nonzero" style="user-select: auto;"><path d="M101.751 211.001a1 1 0 0 0 1.415 1.415l5.208-5.209a1 1 0 0 0 0-1.414l-5.208-5.209A1 1 0 0 0 101.75 202l4.501 4.501-4.5 4.501z" transform="translate(355 153.5)" style="user-select: auto;"></path><path d="M94.334 207.5h12.812a1 1 0 1 0 0-2H94.333a1 1 0 1 0 0 2z" transform="translate(355 153.5)" style="user-select: auto;"></path></g></g></svg>
+                        </div>
+                    </a>
+                </div>
+            </div>
 
-                    <div class="main-con--story-con--grid--normal-box--arrow-circle">
-                        <svg viewBox="0 0 20 20" width="2rem" height="2rem" class="main-con--story-con--grid--normal-box--arrow-circle--icon" style="user-select: auto;"><g fill-rule="evenodd" transform="translate(-446 -350)" style="user-select: auto;"><g fill-rule="nonzero" style="user-select: auto;"><path d="M101.751 211.001a1 1 0 0 0 1.415 1.415l5.208-5.209a1 1 0 0 0 0-1.414l-5.208-5.209A1 1 0 0 0 101.75 202l4.501 4.501-4.5 4.501z" transform="translate(355 153.5)" style="user-select: auto;"></path><path d="M94.334 207.5h12.812a1 1 0 1 0 0-2H94.333a1 1 0 1 0 0 2z" transform="translate(355 153.5)" style="user-select: auto;"></path></g></g></svg>
+            <div class="main-con--mind-section">
+                <div class="main-con--mind-section--grid">
+                    <div class="main-con--mind-section--grid--search-con">
+                        <img src="./img/author/me.jpg" alt="" class="main-con--mind-section--grid--search-con--img">
+                        <input type="search" name="" id="" placeholder="What's on your mind, Shayan?" class="main-con--mind-section--grid--search-con--img--search-box">
                     </div>
                 </div>
             </div>
