mind section half complete

--- a/index.html
+++ b/index.html
@@ -863,7 +863,12 @@
                     <div class="main-con--mind-section--grid--search-con">
                         <img src="./img/author/me.jpg" alt="" class="main-con--mind-section--grid--search-con--img">
                         <input type="search" name="" id="" placeholder="What's on your mind, Shayan?" class="main-con--mind-section--grid--search-con--img--search-box">
+
+                        <div class="main-con--mind-section--grid--search-con--divider"></div>
+
+
                     </div>
+                    <div class="main-con--mind-section--grid--chose-section"></div>
                 </div>
             </div>
         </section>
