hurrah woow completed

--- a/index.html
+++ b/index.html
@@ -1740,13 +1740,13 @@
                 <div class="post-con--box">
                     <div class="post-con--box--header">
                         <div class="post-con--box--header--img-con">
-                            <img src="./img/author/download.png" alt="" class="post-con--box--header--img-con--img">
-                            <p class="post-con--box--header--img-con--img--name-con--name">Shayan</p>
-                            <a href="" class="post-con--box--header--img-con--img--name-con--time">Yesterday at 12:56am</a>
+                            <img src="./img/user/user-38.jpg" alt="" class="post-con--box--header--img-con--img">
+                            <p class="post-con--box--header--img-con--img--name-con--name">Nora</p>
+                            <a href="" class="post-con--box--header--img-con--img--name-con--time" style="    margin-left: -3rem;">Yesterday at 12:56am</a>
                         </div>
                     </div>
                     <div class="post-con--main">
-                        <img src="./img/FB-POST/post 10.webp" alt="" class="post-con--main--img">
+                        <img src="./img/FB-POST/post-10.webp" alt="" class="post-con--main--img">
                     </div>
                     <div class="post-con--reaction">
                         <div class="post-con--reaction--reacted-con">
@@ -1825,9 +1825,9 @@
                 </div>
                 <br/>
                 <br/>
-                <br/>
-                <br/>
-                <br/>
+
+
+
             </div>
         </section>
     </main>
