--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 
         <section class="main-con">
             <div class="main-con--story-con">
-                <div class="main-con--story-con--grid">
+                <div class="respo--prefixer main-con--story-con--grid">
                     <div class="main-con--story-con--grid--box">
                         <img src="./img/author/me.jpg" alt="" class="main-con--story-con--grid--box--img">
                         <div class="main-con--story-con--grid--box--img--plus-circle">
