--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                         <p class="main-con--story-con--grid--normal-box--profile-circle--img--name">@Elena</p>
                     </div>
 
-                    <div class="main-con--story-con--grid--normal-box" style="user-select: auto;">
+                    <div class="hide-me-res-sm main-con--story-con--grid--normal-box" style="user-select: auto;">
                         <img src="./img/group-story/user-5-strory.webp" alt="" class="main-con--story-con--grid--normal-box--img" style="user-select: auto;">
                         <div class="main-con--story-con--grid--normal-box--profile-circle" style="user-select: auto;">
                             <img src="./img/user/n0tificati0n-img-10.jfif" alt="" class="main-con--story-con--grid--normal-box--profile-circle--img" style="user-select: auto;">
@@ -873,7 +873,7 @@
                         </div>
                     </div>
 
-                    <div class="main-con--story-con--grid--normal-box--arrow-circle">
+                    <div class="mobile-res-arrow main-con--story-con--grid--normal-box--arrow-circle">
                         <svg viewBox="0 0 20 20" width="2rem" height="2rem" class="main-con--story-con--grid--normal-box--arrow-circle--icon" style="user-select: auto;"><g fill-rule="evenodd" transform="translate(-446 -350)" style="user-select: auto;"><g fill-rule="nonzero" style="user-select: auto;"><path d="M101.751 211.001a1 1 0 0 0 1.415 1.415l5.208-5.209a1 1 0 0 0 0-1.414l-5.208-5.209A1 1 0 0 0 101.75 202l4.501 4.501-4.5 4.501z" transform="translate(355 153.5)" style="user-select: auto;"></path><path d="M94.334 207.5h12.812a1 1 0 1 0 0-2H94.333a1 1 0 1 0 0 2z" transform="translate(355 153.5)" style="user-select: auto;"></path></g></g></svg>
                     </div>
 
