--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
 
         <div class="porfile-box">
-            <svg aria-hidden="true" class="porfile-box--circle" data-visualcompletion="ignore-dynamic" role="none" style="height: 28px; width: 28px; user-select: auto;"><mask id="jsc_c_2j" style="user-select: auto;"><circle cx="14" cy="14" fill="white" r="14" style="user-select: auto;"></circle></mask><g mask="url(#jsc_c_2j)" style="user-select: auto;"><image style="height: 28px; width: 28px; user-select: auto;" x="0" y="0" height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xlink:href="https://scontent-otp1-1.xx.fbcdn.net/v/t39.30808-1/245042085_234079432031779_2930220725732838194_n.jpg?stp=c0.23.50.50a_cp0_dst-jpg_p50x50&amp;_nc_cat=103&amp;ccb=1-5&amp;_nc_sid=7206a8&amp;_nc_ohc=XymkeWmMfy0AX98EZJd&amp;_nc_ht=scontent-otp1-1.xx&amp;oh=00_AT9puG_gu8pyY5KJIJ7AkDOaRQoD_Qw0b75gtQFIgbTzDA&amp;oe=623B774C"></image><circle class="mlqo0dh0 georvekb s6kb5r3f" cx="14" cy="14" r="14" style="user-select: auto;"></circle></g></svg>
+            <svg aria-hidden="true" class="porfile-box--circle" data-visualcompletion="ignore-dynamic" role="none" style="height: 28px; width: 28px; user-select: auto;"><mask id="jsc_c_2j" style="user-select: auto;"><circle cx="14" cy="14" fill="white" r="14" style="user-select: auto;"></circle></mask><g mask="url(#jsc_c_2j)" style="user-select: auto;"><image style="height: 28px; width: 28px; user-select: auto;" x="0" y="0" height="100%" preserveAspectRatio="xMidYMid slice" width="100%" xlink:href="./img/author/download.png"></image><circle class="mlqo0dh0 georvekb s6kb5r3f" cx="14" cy="14" r="14" style="user-select: auto;"></circle></g></svg>
             <span class="porfile-box--circle--name">Shayan</span>
         </div>
 
@@ -851,7 +851,7 @@
                         <p class="main-con--story-con--grid--normal-box--profile-circle--img--name">@Shayan</p>
                     </div>
 
-                    <div class="main-con--story-con--grid--normal-box">
+                    <div class="hide-me-res--sm main-con--story-con--grid--normal-box">
                         <img src="./img/group-story/user-4-story.webp" alt="" class="main-con--story-con--grid--normal-box--img">
                         <div class="main-con--story-con--grid--normal-box--profile-circle">
                             <img src="./img/user/n0tificati0n-img-9.png" alt="" class="main-con--story-con--grid--normal-box--profile-circle--img">
