--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
 
     <main class="backbone">
-        <section class="sidebar-con">
+        <section class="res-hide-me-vsm sidebar-con">
             <div class="sidebar-con--flex">
                 <div class="sidebar-con--flex--box top-prefixer-sidebar">
                     <img src="./img/author/download.png" alt="" class="sidebar-con--flex--box--img border-round">
