grid of story section reposnsive ios almiosrb complet6e

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
     </nav>
     <!--navbar bottom-->
+
     <nav class="nav-responsive--bottom">
         <div class="nav-responsive--bottom--icon-con">
             <div class="nav-responsive--bottom--icon-con--icon-box">
@@ -84,6 +85,14 @@
         </div>
     </nav>
     <!--navbar bottom-->
+    <!--story section-->
+    <div class="res-story-con">
+  <div class="res-story-con--story-box">
+
+  </div>
+    </div>
+    <!--story section-->
+
 
 
 
