mind ection part one is al ost completeed

--- a/index.html
+++ b/index.html
@@ -118,6 +118,22 @@
         </div>
     </nav>
     <!--navbar bottom-->
+    <!--mind-section-->
+        <section class="res-mind-con">
+            <div class="res-mind-con--whatinmind">
+                <div class="res-mind-con--whatinmind--img">
+                    <img src="./img/author/me.jpg" alt="" class="res-mind-con--whatinmind--img--img">
+                </div>
+                <div class="res-mind-con--whatinmind--search-box"></div>
+            </div>
+            <div class="res-mind-con--chose-con">
+                <div class="res-mind-con--chose-con--v"></div>
+                <div class="res-mind-con--chose-con--v"></div>
+                <div class="res-mind-con--chose-con--v"></div>
+            </div>
+        </section>
+    <!--mind-section-->
+
     <!--story section-->
     <section class="res-story-con">
         <div class="res-story-con--grid">
