post section is alomsrt complete

--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@
 
     </section>
     <!--story section-->
+<!--post section-->
+<section class="res-post-con">
+    <div class="res-post-con--grid">
+        <div class="res-post-con--grid--post">
+            
+        </div>
+    </div>
+</section>
+<!--post section-->
 
 
 
